<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_xa_geo_web_view_client">XaGeoWebViewClient</string>
    <string name="title_activity_xa_geo_web_chrome_client">XaGeoWebChromeClient</string>
    <string name="param_base_url">senta-secure.com</string>

    <string name="app_name" translatable="false">DataExtractor</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="hello" translatable="false">Hello</string>

    <string name="title_activity_st_ws_welcome">SentaSecure Research Project</string>
    <string name="title_activity_key_stroke">KeyStrokeActivity</string>
    <string name="title_activity_st_ws_login">StWsLoginActivity</string>
    <string name="SentaDescrption">Senta Machine Learning\n\n
    Thank you for participating in the Senta Machine Learning Project!\n
    This application collects anonymous data from your device to find a unique signature. \n
    If you would like to stop participating at any time, please push the button below.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="remember_me">Remember me</string>
    <string name="login_successful">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="exit">Exit</string>
    <string name="url">URL</string>
    <string name="server">Server</string>
    <string name="please_enter_a_valid_url">Please enter a valid url</string>
    <string name="sending_data_to_senta_secure_server">Sending data to Senta secure server…</string>
    <string name="set_demo_user">Set demo user</string>
    <string name="accept_agreement">Accept Agreement</string>
    <string name="eula_text">This application is released under the GPL, as such it is provided
        with no warranty and no liability regarding its fitness for purpose.\n
        \n
        This application monitors and analyses system parameters and processes in your device(s).\n
        It will not search your emails, contacts, messages phone calls or other personal data. It may consume a large amount of data compared to other applications, but this should not be more than a few hundred megabytes per month.</string>
    <string name="ok">OK</string>
    <string name="check_data_settings">Check Data settings</string>

    <!-- With your help we intend to build a system that secures your data to your unique identity.
    Your personal data will not be extracted! The files are very small and will not consume a noticeable amount of data or drain the battery.
    -->

</resources>
